# udp-benchmark

./: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs  results.rs
examples/config/: simple.json
manager/: Cargo.toml
manager/src/: lib.rs  main.rs
manager/src/config/: mod.rs
manager/src/os/: linux.rs  mod.rs
packet/: Cargo.toml
packet/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
