[package]
name = "client"
version = "0.1.0"
authors = ["Finn Behrens <fin@nyantec.com>", "The nyantec Authors <dev@nyantec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = { version = "1.9", features = [ "attributes", "unstable" ] }
futures = "0.3"
getopts = "0.2.21"
pretty_env_logger = "0.4"
log = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

packet = { path = "../packet" }