[package]
name = "server"
version = "0.1.0"
authors = ["Finn Behrens <fin@nyantec.com>", "The nyantec Authors <dev@nyantec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = { version = "1.9", features = [ "attributes", "unstable" ] }
getopts = "0.2.21"
env_logger = "0.9.0"
log = "0.4"
libc = "0.2"